[package]
name = "world-transmuter-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
clap = { version = "4.4.2", features = ["cargo"] }
flate2 = "1.0.26"
java_string = "0.1"
rayon = "1.7.0"
valence_anvil = "0.1.0"
valence_nbt = { version = "0.8", features = ["binary", "java_string"] }
world-transmuter = { path = "../world-transmuter" }
world-transmuter-engine = "0.6.1"
