[package]
name = "world-transmuter-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
clap = { version = "4.4.2", features = ["cargo"] }
flate2 = "1.0.26"
java_string = "0.1"
rayon = "1.7.0"
time = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-tree = { version = "0.2.5", features = ["time"] }
valence_anvil = "0.1.0"
valence_nbt = { version = "0.8", features = ["binary", "java_string"] }
world-transmuter = { path = "../world-transmuter" }
world-transmuter-engine = "0.6.1"
